Dark Mode Style correction

--- a/src/style/scss/pages/_customisedstyle.scss
+++ b/src/style/scss/pages/_customisedstyle.scss
@@ -461,7 +461,8 @@ ul.ant-pagination.ant-table-pagination li button.ant-pagination-item-link {
 
 [data-layout-mode='dark_mode'] .css-13cymwt-control {
 	background-color: #1d1d42;
-	border: 1px solid#67748E;
+	// border: 1px solid#67748E;
+	border: 1px solid #353570;
 }
 
 [data-layout-mode='dark_mode'] .css-t3ipsp-control {
@@ -497,7 +498,7 @@ ul.ant-pagination.ant-table-pagination li button.ant-pagination-item-link {
 }
 
 .css-b62m3t-container .css-13cymwt-control {
-	border-color: #dbe0e6;
+	// border-color: #dbe0e6;
 	color: #5b6670;
 	height: 40px;
 	justify-content: center;
